modified:   Home.py 	new file:   assets/Bitcoin option/bitcoin price.jpg 	new file:   assets/Bitcoin option/call put.jpg 	new file:   assets/Bitcoin option/log return.jpg 	new file:   reports/rapport_VBA.html 	modified:   reports/rapport_machine_learning.html

--- a/reports/rapport_machine_learning.html
+++ b/reports/rapport_machine_learning.html
@@ -1,6 +1,5 @@
 <h3>Hedging a Portfolio with Greek Constraints</h3>
-<p><strong>Machine Learning Project Report</strong></p>
-<p><strong>Authors:</strong> Teo Bourscheidt, Hugo Boutevillain, Alexei Caminade</p>
+<p><strong>Authors : </strong> Alexei Caminade, Teo Bourscheidt, Hugo Boutevillain</p>
 
 <h3>Abstract</h3>
 <p>This report details the implementation of a machine learning-based approach to hedge a portfolio of derivatives.</p>
